--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "prettier": "2.7.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
-    "jasmine-spec-reporter": "^7.0.0",
-
+    "jasmine-spec-reporter": "^7.0.0"
   },
   "dependencies": {
     "express": "^4.18.1",
