--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "prettier": "2.7.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
-    "jasmine-spec-reporter": "^7.0.0"
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine": "^4.2.1",
+    "supertest": "^6.2.3"
   },
   "dependencies": {
     "express": "^4.18.1",
-    "sharp": "^0.30.7",
-    "jasmine": "^4.2.1",
-    "supertest": "^6.2.3"
+    "sharp": "^0.30.7"
   }
 }
